--- a/package.json
+++ b/package.json
@@ -7,11 +7,19 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "db:generate": "drizzle-kit generate"
   },
   "dependencies": {
+    "@nuxthub/core": "^0.8.27",
+    "drizzle-orm": "^0.43.1",
+    "mysql2": "^3.14.1",
     "nuxt": "^3.17.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "drizzle-kit": "^0.31.1",
+    "wrangler": "^4.14.4"
   }
 }
