--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "drizzle-kit": "^0.31.1",
     "wrangler": "^4.14.4"
   }
